--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-*{
-  color: white;
-}
+
 .App {
   text-align: center;
 }
@@ -24,7 +22,9 @@ body{
   max-height: 100vh;
   height:100vh;
 }
-
+.front *{
+  color: #fff;
+}
 /* cards  */
 .card-character
 {
@@ -145,6 +145,153 @@ border: 1px solid;
 {
   height:70vh;
 }
+
+
+/* dropdown */
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+
+.MuiList-root .MuiList-padding .MuiMenu-list .css-6hp17o-MuiList-root-MuiMenu-list{
+  color:'#000' !important;
+}
+.css-1poimk-MuiPaper-root-MuiMenu-paper-MuiPaper-root-MuiPopover-paper{
+  background-color: black !important;
+  color:'#fff'; 
+}
+.css-hfutr2-MuiSvgIcon-root-MuiSelect-icon{
+  color: rgba(250, 250, 250, 1) !important;
+  color:'#fff'; 
+}
+.css-1sumxir-MuiFormLabel-root-MuiInputLabel-root
+{
+  color:rgba(250, 250, 250, 1) !important;
+  color:'#fff'; 
+}
+.css-1suyv42-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root.Mui-focused .MuiOutlinedInput-notchedOutline{
+  border-color: #fff !important;
+}
+.css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root{
+  color:rgba(250, 250, 250, 1) !important;
+}
+.films-box{
+  background-color: white;
+}
+
+/* button back animation  */
+
+.btn-back{
+  color:white;
+  font-size:25px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.btn {
+  width: 150px;
+  height: 50px;
+  border: 1px solid #333;
+  font-family: 'Cinzel', serif;
+  font-size: 20px;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  z-index: 0;
+  transition: 1s;
+}
+
+.btn::before, .btn::after {
+  position: absolute;
+  background: transparent;
+  z-index: -1;
+  transition: 1s;
+  content: '';
+}
+
+.btn::before {
+  height: 50px;
+  width: 130px;
+}
+
+.btn::after {
+  width: 150px;
+  height: 30px;
+}
+
+.noselect {
+  -webkit-touch-callout: none;
+    -webkit-user-select: none;
+     -khtml-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+}
+
+.btn:hover::before {
+  width: 0px;
+  background: #000;
+}
+
+.btn:hover::after {
+  height: 0px;
+  background: #000;
+}
+
+.btn:hover {
+  background: #000;
+  border-color: yellow;
+  color: #fff;
+}
+
+.card-info{
+ border: 2px solid white;
+ border-radius:35px;
+ padding: 20px;
+ height: 100%;
+}
+.card-info *{
+  color: #fff;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
